--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Joshua Lande
-tagline:          'Data Science, Apache Pig, Hadoop, Blogging, Tweets, Astrophysics'
-url:              http://www.joshualande.com
-shorturl:         joshualande.com
+title:            Filter Kaapi
+tagline:          'Startups, Coding, Marathons, Travel'
+url:              http://filterkaapi.github.io
+shorturl:         filterkaapi.github.io
 
 author:
-  name:           'Joshua Lande'
-  url:            https://twitter.com/joshualande
+  name:           'Filter Kaapi'
+  url:            https://twitter.com/sanlaxman
 
 paginate:         1
 
@@ -24,15 +24,15 @@ paginate:         1
 version:          1.0.0
 
 github:
-  repo:           github.com/joshualande/joshualande.github.io
+  repo:           github.com/FilterKaapi/filterkaapi.github.io
 
 # This is the list of pages to include in the header of the website.
-pages_list:       
+pages_list:
   About: '/about/'
   Archive: '/archive/'
   Feed: '/atom.xml'
 
-# Allow URL Redirects: 
+# Allow URL Redirects:
 #  * https://help.github.com/articles/redirects-on-github-pages
 gems:
   - jekyll-redirect-from
