--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ permalink:        pretty
 # Setup
 title:            Filter Kaapi
 tagline:          'Startups, Coding, Marathons, Travel'
-url:              http://filterkaapi.github.io
-shorturl:         filterkaapi.github.io
+url:              http://filterkaapi.org
+shorturl:         filterkaapi.org
 
 author:
   name:           'Filter Kaapi'
